# engraving_app

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  simple.mscz
musescore/: CMakeLists.txt  cryptographichash.cpp  cryptographichash.h  engravingconfiguration.cpp  engravingconfiguration.hpp  engravingfont.cpp  engravingfont.hpp  engravingfontsprovider.cpp  engravingfontsprovider.hpp  filesystem.cpp  filesystem.hpp  isymbolmetrics.hpp  musescoremodules.cpp  musescoremodules.h  resourcesregister.cpp  resourcesregister.h  symbolmetricsfm.cpp  symbolmetricsfm.hpp
musescore/fonts/: CMakeLists.txt  fontsmodule.cpp  fontsmodule.hpp  fontstypes.hpp  ifontsdatabase.hpp  ifontsengine.hpp
musescore/fonts/internal/: fontfacedu.cpp  fontfacedu.hpp  fontfaceft.cpp  fontfaceft.hpp  fontfacext.cpp  fontfacext.hpp  fontprovider.cpp  fontprovider.hpp  fontrendercache.cpp  fontrendercache.hpp  fontsdatabase.cpp  fontsdatabase.hpp  fontsengine.cpp  fontsengine.hpp  ifontface.hpp
musescore/resources/: fonts_Edwin.qrc.cpp  fonts_Leland.qrc.cpp  fonts_MuseScoreTab.qrc.cpp  notations.qrc.cpp  smufl.qrc.cpp
